<resources>
    <string name="app_name">To-Do Manager</string>
    <string name="texto_splash">TO-DO MANAGER</string>
    <string name="todoCirculo">circuloSplash</string>
    <string name="todoCruz">logoCruz</string>
    <string name="todoTic">logoTic</string>
    <string name="todoFondoLogin">imagenFondoLogin</string>
    <string name="subtituloLogin">Todas tus tareas a un check</string>
    <string name="hintUser">Usuario</string>
    <string name="hintPass">Contraseña</string>
    <string name="botonLoginTexto">ACCEDER</string>
    <string name="contrasenaOlvidada">¿Has olvidado tu contraseña?</string>
    <string name="registrarCuenta">Registrar cuenta nueva</string>
    <string name="recordarCuenta">Recordar cuenta</string>
    <string name="todoimagencontrasena">todoImagenContrasena</string>
    <string name="todoimagenusuario">todoImagenUsuario</string>
    <string name="titleMenuIconAdd">ItemAdd</string>
    <string name="actionBarMainText">Mis tareas</string>
    <string name="dialogTitle">Insertar nueva tarea</string>
    <string name="dialogNegativeText">Cancelar</string>
    <string name="dialogPositiveText">Añadir</string>
    <string name="textoTaskItemList">TextView</string>
    <string name="todocompletetask">todoCompleteTask</string>
    <string name="todoimageniconoadd">TODOIMAGENICONOADD</string>
    <string name="todoimagendelete">TODOIMAGENDELETE</string>
</resources>
